--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,4 +7,46 @@
     android:orientation="vertical"
     tools:context=".ui.activities.MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="@dimen/size_small_24"
+            android:layout_height="@dimen/size_small_24"
+            android:layout_marginLeft="@dimen/size_small_24"
+            android:layout_marginTop="@dimen/size_small_24"
+            android:src="@drawable/ic_call_black_24dp" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="@dimen/size_large_72"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="@dimen/spacing_medium_32"
+            android:layout_marginRight="@dimen/spacing_normal_16"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="phone"
+                    android:hint="Мобильный телефон"/>
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="@dimen/size_small_24"
+            android:layout_height="@dimen/size_small_24"
+            android:layout_marginTop="@dimen/size_small_24"
+            android:layout_marginRight="@dimen/size_small_24"
+            android:src="@drawable/ic_call_end_black_24dp" />
+    </LinearLayout>
+
 </LinearLayout>
