--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,22 +9,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_small_8"
+        android:layout_marginBottom="@dimen/spacing_small_8"
+        android:gravity="bottom"
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="@dimen/size_small_24"
-            android:layout_height="@dimen/size_small_24"
-            android:layout_marginLeft="@dimen/size_small_24"
-            android:layout_marginTop="@dimen/size_small_24"
+            style="@style/icon.left"
             android:src="@drawable/ic_call_black_24dp" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="@dimen/size_large_72"
-            android:gravity="center_vertical"
             android:layout_marginLeft="@dimen/spacing_medium_32"
             android:layout_marginRight="@dimen/spacing_normal_16"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
@@ -33,20 +32,80 @@
                 android:layout_height="wrap_content">
 
                 <EditText
+                    android:id="@+id/phone_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:editable="false"
+                    android:hint="Мобильный телефон"
                     android:inputType="phone"
-                    android:hint="Мобильный телефон"/>
+                    android:text="935298068"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/grey"
+                    android:focusable="false"/>
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
 
         <ImageView
-            android:layout_width="@dimen/size_small_24"
-            android:layout_height="@dimen/size_small_24"
-            android:layout_marginTop="@dimen/size_small_24"
-            android:layout_marginRight="@dimen/size_small_24"
-            android:src="@drawable/ic_call_end_black_24dp" />
+            style="@style/icon.right"
+            android:src="@drawable/ic_phone_in_talk_black_24dp" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_size"
+        android:layout_marginLeft="@dimen/spacing_larger_72"
+        android:background="@color/grey_light" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_small_8"
+        android:layout_marginBottom="@dimen/spacing_small_8"
+        android:gravity="bottom"
+        android:orientation="horizontal">
+
+        <ImageView
+            style="@style/icon.left"
+            android:src="@drawable/ic_send_black_24dp" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="@dimen/size_large_72"
+            android:layout_marginLeft="@dimen/spacing_medium_32"
+            android:layout_marginRight="@dimen/spacing_normal_16"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/email_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:editable="false"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:text="myMail"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/grey"
+                    android:focusable="false"/>
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+        <ImageView
+            style="@style/icon.right"
+            android:src="@drawable/ic_email_black_24dp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/line_size"
+        android:layout_marginLeft="@dimen/spacing_larger_72"
+        android:background="@color/grey_light" />
 
 </LinearLayout>
