--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -149,6 +149,7 @@
             </LinearLayout>
 
             <ImageView
+                android:id="@+id/call_img"
                 style="@style/icon.right"
                 android:src="@drawable/ic_phone_in_talk_black_24dp" />
         </LinearLayout>
