Реализовал обработку события нажатия на кнопку back, и скругление фото пользователя в NavigationDrawer...

--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -2,17 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="172dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingRight="@dimen/spacing_normal_16"
     android:paddingLeft="@dimen/spacing_normal_16"
     android:paddingTop="@dimen/spacing_medial_24"
     android:paddingBottom="@dimen/spacing_small_8"
     android:background="@drawable/header_bg">
 
-    <ImageView
+    <com.github.siyamed.shapeimageview.CircularImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="@color/color_accent"
-        android:layout_marginTop="@dimen/spacing_normal_16"/>
+        android:src="@drawable/oa"
+        app:siRadius="2dp"
+        android:layout_marginTop="@dimen/spacing_normal_16"
+        app:siBorderWidth="2dp"
+        app:siBorderColor="@color/grey"
+        app:siSquare="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
